# sparse-linear

./: default.nix  shell.nix  sparse-linear.cabal
src/Numeric/LinearAlgebra/: Sparse.hs
