name:                sparse-linear
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Numeric.LinearAlgebra.Sparse
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
    , primitive >=0.5 && <1
    , transformers >=0.3 && <1
    , vector >=0.10 && <1
    , vector-algorithms >=0.6 && <1
  default-language: Haskell2010
  ghc-options: -Wall -rtsopts -fsimpl-tick-factor=1000
  ghc-prof-options: -fprof-auto
